# badge-project

./: .gitignore  .gitmodules  README.md
badge-project-android/: build.gradle.kts  settings.gradle.kts
badge-project-android/app/: build.gradle.kts
badge-project-android/app/src/androidTest/java/com/thejebforge/badgeproject/: ExampleInstrumentedTest.kt
badge-project-android/app/src/main/: AndroidManifest.xml
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/: MainApplication.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/data/dao/: PreviousDeviceDao.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/data/entity/: PreviousDevice.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/data/repository/: BPRepository.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/data/source/: BPDatabase.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/gatt/: CharacterExtensions.kt  GATTCommandHandler.kt  GATTHelper.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/gatt/command/: ActionCommand.kt  BacklightCommands.kt  DiscoverServices.kt  EnableCommands.kt  GATTCommand.kt  GetActionId.kt  GetActionName.kt  GetCharacter.kt  GetCharacterName.kt  InvokeAction.kt  ReadCharacteristic.kt  Service.kt  SwitchCharacter.kt  WriteCharacteristic.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/service/: BoardService.kt  BoardServiceImpl.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/ui/: MainActivity.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/ui/theme/: Color.kt  Theme.kt  Type.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/ui/view/: DeviceControl.kt  DeviceList.kt  IRoute.kt  NoPermissions.kt  WaitingForPermissions.kt
badge-project-android/app/src/main/java/com/thejebforge/badgeproject/util/: BluetoothHelper.kt  BoardConstants.kt  CallbackCollector.kt  GATTHelper.kt  PayloadCreator.kt  PermissionsHelper.kt  Response.kt  Utils.kt
badge-project-android/app/src/main/res/drawable/: badge_project.xml  badge_project_notif.xml  ic_launcher_background.xml
badge-project-android/app/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
badge-project-android/app/src/main/res/values/: strings.xml  themes.xml
badge-project-android/app/src/test/java/com/thejebforge/badgeproject/: ExampleUnitTest.kt
badge-project-android/gradle/: libs.versions.toml
badge-project-android/gradle/wrapper/: gradle-wrapper.properties
badge-project-cpp/: .gitignore  CMakeLists.txt  sdcard-folder-structure.md  sdkconfig  sdkconfig.old
badge-project-cpp/components/espressif__esp_lcd_touch_cst816s/: esp_lcd_touch_cst816s.c
badge-project-cpp/main/: CMakeLists.txt  Kconfig.projbuild  badge-project.cpp  idf_component.yml
badge-project-cpp/main/bp/: fsm.cpp  fsm.hpp
badge-project-cpp/main/bp/data/: character.cpp  character.hpp  format.hpp  image.cpp  image.hpp
badge-project-cpp/main/bp/init/: bluetooth.cpp  bluetooth.hpp  display.cpp  display.hpp  sdcard.cpp  sdcard.hpp
badge-project-cpp/main/bp/util/: allocator.hpp  critical.cpp  critical.hpp  error.cpp  error.hpp  frame_timer.cpp  frame_timer.hpp  lvgl_lock.cpp  lvgl_lock.hpp  task_delete.hpp
badge-project-tools/: Cargo.toml  build.rs  test.json  test.tar
badge-project-tools/badge-project-tools/: Cargo.toml  test.json  test.tar
badge-project-tools/badge-project-tools/src/: image.rs  main.rs
badge-project-tools/badge-project-tools/src/character/: mod.rs  repr.rs  util.rs
badge-project-tools/badge-project-tools/src/gui/: mod.rs
badge-project-tools/badge-project-tools/src/gui/app/: mod.rs  shared.rs  start.rs  util.rs
badge-project-tools/badge-project-tools/src/gui/app/editor/: intermediate.rs  mod.rs  nodes.rs  resources.rs  simulator.rs  validation.rs
badge-project-tools/badge-project-tools/src/gui/app/editor/nodes/: custom_widget.rs  mod.rs
badge-project-tools/egui-snarl/: Cargo.toml
badge-project-tools/egui-snarl/src/: ui.rs
badge-project-tools/egui-snarl/src/ui/: viewer.rs
badge-project-tools/src/: main.rs
badge-project-tools/src/character/: mod.rs  repr.rs  util.rs
badge-project-tools/src/gui/app/: start.rs  util.rs
badge-project-tools/src/gui/app/editor/: intermediate.rs
badge-project-tools/src/tui/: mod.rs  util.rs
badge-project-tools/src/tui/screens/: character_screen.rs  file_selector.rs  mod.rs
