[package]
name = "bp-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
image = "0.25.8"
tar = "0.4.44"

[build-dependencies]
bindgen = "0.72.1"
