[package]
name = "bp-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
image = "0.25.8"
tar = "0.4.44"
ratatui = { version = "0.29.0", features = ["serde", "all-widgets", "macros"] }
ratatui-explorer = "0.2.1"
tui-textarea = { version = "0.7.0", features = ["serde"] }
derive_setters = "0.1.8"

[build-dependencies]
bindgen = "0.72.1"
