[package]
name = "bp-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = { version = "1.0.100" }
tar = "0.4.44"
derive_setters = "0.1.8"
either = { version = "1.15.0", features = ["serde"] }

egui = "0.33.3"
eframe = { version = "*", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
egui_extras = { version = "*", features = [
    "all_loaders"
] }
egui-snarl = "0.9.0"

image = { version = "0.25.9", features = ["default"] }
strum = { version = "0.27", features = ["derive"] }
rfd = "0.17.2"

[build-dependencies]
bindgen = "0.72.1"
