[package]
name = "bp-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.149"
anyhow = { version = "1.0.100" }
tar = "0.4.44"
either = { version = "1.15.0", features = ["serde"] }

egui.workspace = true
eframe = { version = "*", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
egui_extras = { workspace = true, features = [
    "all_loaders"
] }
egui-snarl = { path = "../egui-snarl" }

image = { version = "0.25.9", features = ["default"] }
strum = { version = "0.27", features = ["derive"] }
rfd = "0.17.2"

timeago = "0.5.0"

[build-dependencies]
bindgen = "0.72.1"
