[package]
name = "egui-snarl"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Node-graphs for egui"
readme = "README.md"
keywords = ["egui", "node", "graph", "ui", "node-graph"]
categories = ["gui", "visualization"]

[features]
serde = ["dep:serde", "egui/serde", "slab/serde"]

[dependencies]
egui.workspace = true
slab = { version = "0.4" }
serde = { workspace = true, features = ["derive"], optional = true }
smallvec = { version = "1.15", features = ["const_new"] }

egui-probe = { workspace = true, features = ["derive"], optional = true }
egui-scale.workspace = true

[dev-dependencies]
eframe = { workspace = true, features = ["serde", "persistence"] }
egui_extras = { workspace = true, features = ["all_loaders"] }
serde_json.workspace = true
syn = { workspace = true, features = ["extra-traits"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures.workspace = true
